--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
   <h2>Get In Touch</h2>
   <p class="contact-subtext">Start your care journey today—we’re here to help.</p>
   <div class="contact-card">
-    <p><strong>Email:</strong> careconnectph@gmail.com</p>
-    <p><strong>Phone:</strong> (02) 1234 5678</p>
-    <p><strong>Office:</strong> 123 Wellness St., Caloocan City, Metro Manila</p>
+    <p><strong>Email:</strong> maellenadatinguinoo@gmail.com</p>
+    <p><strong>Phone:</strong> (639) 124097560</p>
+    <p><strong>Office:</strong> Tandang Sora, Quezon City.</p>
   </div>
 </section>
 
