--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a class="cta" href="#services">Explore Services</a>
       </div>
       <div class="hero-slider">
-        <img id="slider-img" src="img/hero1.avif" alt="Hero Image" />
+        <img id="slider-img" src="img/hero1.jpg" alt="Hero Image" />
         <button class="slider-btn prev" onclick="prevImage()">&#10094;</button>
         <button class="slider-btn next" onclick="nextImage()">&#10095;</button>
       </div>
@@ -59,17 +59,17 @@
       <h2>Our Services</h2>
       <div class="service-grid">
         <div class="service-item">
-          <img src="img/wellness-icon.jpg" alt="Virtual Consultations"/>
+          <img src="img/f3.jpg" alt="Virtual Consultations"/>
           <h4>Virtual Consultations</h4>
           <p>Video call with nurses for health guidance and follow-ups.</p>
         </div>
         <div class="service-item">
-          <img src="img/homecare-icon.jpg" alt="Home Care"/>
+          <img src="img/f22.jpg" alt="Home Care"/>
           <h4>In-Home Care</h4>
           <p>Book nurses for elderly care, post-op recovery, and chronic condition support.</p>
         </div>
         <div class="service-item">
-          <img src="img/consultation-icon.jpg" alt="Wellness"/>
+          <img src="img/f1.jpg" alt="Wellness"/>
           <h4>Wellness Coaching</h4>
           <p>Nutrition, exercise, and mental health guidance tailored to you.</p>
         </div>
@@ -81,8 +81,8 @@
   <h2>Get In Touch</h2>
   <p class="contact-subtext">Start your care journey today—we’re here to help.</p>
   <div class="contact-card">
-    <p><strong>Email:</strong> maellenadatinguinoo@gmail.com</p>
-    <p><strong>Phone:</strong> (639) 124097560</p>
+    <p><strong>Email:</strong>maellenadatinguinoo@gmail.com</p>
+    <p><strong>Phone:</strong> (639) 9124097560</p>
     <p><strong>Office:</strong> Tandang Sora, Quezon City.</p>
   </div>
 </section>
